# SKaiNET-embedded

./: .gitignore  README.md
.github/workflows/: docs.yml  pages.yml
coralnpu/: Dockerfile  antora-playbook.yml  entrypoint.sh  package.json
coralnpu/coralnpu-codegen/: build.gradle.kts  settings.gradle.kts
coralnpu/docs/: antora.yml
coralnpu/iree-tools/: .gitignore  README.md  bazel_builder.py  codegen.py  ir.py  iree_commands.py  main.py  mlir2coral.md  mlir2npu.md  mlir_parser.py  pyproject.toml  rgb2grayscale.mlir  simulator.py
coralnpu/lib/: mermaid-extension.js
docs/: antora-playbook.yml  antora.yml
sl2610-function-calling/: .gitignore  README.md  bootstrap.sh  build.gradle.kts  demo.env.example  gradle.properties  settings.gradle.kts
sl2610-function-calling/.run/: Deploy to board.run.xml  Host run.run.xml
sl2610-function-calling/asr/: build.gradle.kts
sl2610-function-calling/docs/: BOARD-RUNBOOK.md  FINETUNING.md  FINISH-PLAN.md  GEMMA-KV-BOARD-LOOP.md  GEMMA-KV-INT8.md  PERF-LOGBOOK.md  PIPELINE.md  PLAN.md  STATUS.md  TOOLCHAIN-PIN.md  announce-kotlin-slack.md  kotlin-on-the-edge.md  reuse-template.md  torq-toolchain-update.md  torq.md
sl2610-function-calling/gradle/: libs.versions.toml
sl2610-function-calling/llm/: build.gradle.kts
sl2610-function-calling/runtime/: build.gradle.kts
sl2610-function-calling/scripts/: add_argmax_perpos.py  add_argmax_tail.py  compile-gemma.sh  compile-moonshine-decoder.sh  convert_moonshine_weights.py  deploy.sh  extract_moonshine_onnx_weights.py  gen-config-discover.sh  iree-compile-cpu.sh  make_f16.py  (+9 more)
(+89 files in other folders)
