[project]
name = "iree-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iree-compiler>=20241104.1068",
    "iree-runtime>=20241104.1068",
    "iree-tools-tflite>=20260107.1499",
    "iree-tools-xla>=20230404.479",
]
